# software-cup

./: .gitignore
src/camera_detection/: package.xml  setup.cfg  setup.py
src/camera_detection/camera_detection/: capture_relay.py  detection_server.py  intelligence.py  main_server.py  unified_server.py  video_server.py
src/camera_detection/launch/: camera_detection.launch.py  start_backend.sh
src/camera_detection/test/: test_intelligence.py
src/camera_detection/tools/: benchmark_rknn.py
src/chassis_control/: package.xml  setup.cfg  setup.py
src/chassis_control/chassis_control/: __init__.py  gamepad_control.py
src/chassis_control/resource/: chassis_control
